# gevorderde-algoritmen

./: README.md
Autocomplete/: .gitignore
Autocomplete/include/: ternaire-zoekboom.h
Autocomplete/src/: ternaire-zoekboom.cpp
Autocomplete/test/: test.cpp
Dijkstra/include/: fietsnet.h
Dijkstra/src/: fietsnet.cpp  webserver.cpp
Dijkstra/test/: CMakeLists.txt  test.cpp
Fietsknooppunten/src/: fietsnet.cpp
Huffman/: .gitignore
Huffman/include/: bitstream.h  huffman.h
Huffman/src/: bitstream.cpp  huffman.cpp
Huffman/test/: test.cpp
LZW/src/: lzw.cpp  main.cpp
Regexps/include/: automaten.h
Regexps/src/: automaten.cpp
documentatie/: README.md
documentatie/setup/: SETUP.mac.md  SETUP.ubuntu.md  SETUP.windows.md
documentatie/setup/smoke-test/: .gitignore  CMakeLists.txt
documentatie/setup/smoke-test/src/: lib.hpp  main.cpp
documentatie/setup/smoke-test/test/: CMakeLists.txt  test.cpp
oefeningen theorie/BEZenDEZ/: BEZ.dot  CMakeLists.txt  DEZ.dot
oefeningen theorie/BEZenDEZ/include/: boom.h  graaf.h
oefeningen theorie/BEZenDEZ/src/: boom.cpp  graaf.cpp  main.cpp
oefeningen theorie/kleuring/: CMakeLists.txt  kleuring.dot
oefeningen theorie/kleuring/include/: graaf.h
oefeningen theorie/kleuring/src/: graaf.cpp  main.cpp
oefeningen theorie/kruskal/: CMakeLists.txt  minOpspannendeBoom.dot
oefeningen theorie/kruskal/include/: graaf.h
oefeningen theorie/kruskal/src/: graaf.cpp  main.cpp
oefeningen theorie/patriciatries/: patriciatrie.cpp
